- removed parameter "branchdir" from SCIPbranchVar()
- new parameters "leftchild", "eqchild", and "downchild" for SCIPbranchVar()
- new method SCIPcalcNodeselPriority()
- new parameter "estimate" for SCIPcreateChild()
- removed method SCIPnodeGetPriority()
- new method SCIPnodeGetEstimate()
- new methods SCIPgetLocalOrigEstimate() and SCIPgetLocalTransEstimate()

plugins:
- improved performance of linear constraint propagation by delaying some floor/ceil calculations
- new node selection rule "estimate" (best estimate search)
- best estimate search is now used in all large neighborhood search heuristics
- new heuristic "actconsdiving" following an idea of John Chinneck
- new node selection rule "hybridestim"

parameters:
- new parameter "separating/clique/backtrackfreq" to speed up clique cut separation in heuristic fashion
- new parameters "separating/*/maxbounddist" to have individual maxbounddist parameters per separator
- changed default value of global "separating/maxbounddist" to 1.0
- new parameter "separating/redcost/continuous"
- new parameter "heuristics/feaspump/maxstallloops"
- priority parameters are now restricted to be in [INT_MIN/4,INT_MAX/4] to avoid overflow errors in comparison methods
- new parameter "presolving/immrestartfac"
- changed default value of "numerics/boundstreps" to 0.05 in order to avoid very long propagation loops on continuous variables
- new parameter "nodeselection/childsel" to control the child selection
- new parameters "heuristics/*diving/backtrack" to activate 1-level backtracking for most of the diving heuristics
- increased priority of "estimate" node selector, such that this is the new default node selector
- changed default value of "separating/objparalfac" to 0.01 for performance reasons
- changed default values of "heuristics/*diving/backtrack to TRUE

bugs:
- SCIPgetAvgPseudocostCount() and SCIPgetAvgPseudocostCountCurrentRun() now return the average over all integer variables instead