@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: var.h,v 1.110 2006/06/07 08:21:05 bzfpfend Exp $"
+#pragma ident "@(#) $Id: var.h,v 1.111 2006/12/06 13:04:56 bzfpfend Exp $"
 
 /**@file   var.h
  * @brief  internal methods for problem variables
@@ -185,71 +185,6 @@ void SCIPbdchginfoFree(
    SCIP_BDCHGINFO**      bdchginfo,          /**< pointer to store bound change information */
    BMS_BLKMEM*           blkmem              /**< block memory */
    );
-
-#ifndef NDEBUG
-
-/* In debug mode, the following methods are implemented as function calls to ensure
- * type validity.
- */
-
-/** returns the new value of the bound in the bound change data */
-extern
-SCIP_Real SCIPboundchgGetNewbound(
-   SCIP_BOUNDCHG*        boundchg            /**< bound change data */
-   );
-
-/** returns the variable of the bound change in the bound change data */
-extern
-SCIP_VAR* SCIPboundchgGetVar(
-   SCIP_BOUNDCHG*        boundchg            /**< bound change data */
-   );
-
-/** returns the bound change type of the bound change in the bound change data */
-extern
-SCIP_BOUNDCHGTYPE SCIPboundchgGetBoundchgtype(
-   SCIP_BOUNDCHG*        boundchg            /**< bound change data */
-   );
-
-/** returns the bound type of the bound change in the bound change data */
-extern
-SCIP_BOUNDTYPE SCIPboundchgGetBoundtype(
-   SCIP_BOUNDCHG*        boundchg            /**< bound change data */
-   );
-
-/** returns the number of bound changes in the domain change data */
-extern
-int SCIPdomchgGetNBoundchgs(
-   SCIP_DOMCHG*          domchg              /**< domain change data */
-   );
-
-/** returns whether the bound change is redundant due to a more global bound that is at least as strong */
-extern
-SCIP_Bool SCIPboundchgIsRedundant(
-   SCIP_BOUNDCHG*        boundchg            /**< bound change data */
-   );
-
-/** returns a particular bound change in the domain change data */
-extern
-SCIP_BOUNDCHG* SCIPdomchgGetBoundchg(
-   SCIP_DOMCHG*          domchg,             /**< domain change data */
-   int                   pos                 /**< position of the bound change in the domain change data */
-   );
-
-#else
-
-/* In optimized mode, the methods are implemented as defines to reduce the number of function calls and
- * speed up the algorithms.
- */
-
-#define SCIPboundchgGetNewbound(boundchg)      ((boundchg)->newbound)
-#define SCIPboundchgGetVar(boundchg)           ((boundchg)->var)
-#define SCIPboundchgGetBoundchgtype(boundchg)  ((SCIP_BOUNDCHGTYPE)((boundchg)->boundchgtype))
-#define SCIPboundchgGetBoundtype(boundchg)     ((SCIP_BOUNDTYPE)((boundchg)->boundtype))
-#define SCIPboundchgIsRedundant(boundchg)      ((boundchg)->redundant)
-#define SCIPdomchgGetNBoundchgs(domchg)        ((domchg) != NULL ? (domchg)->domchgbound.nboundchgs : 0)
-#define SCIPdomchgGetBoundchg(domchg, pos)     (&(domchg)->domchgbound.boundchgs[pos])
-
-#endif
 
 
 
